<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_other_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.ucdenver.androidsecurity.OtherSettingsActivity">


    <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:orientation="vertical"
            android:background="@android:color/white">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:padding="10dp"
                android:orientation="horizontal"
                android:background="@android:color/white"
                android:weightSum="1">

                <TextView
                    style="@style/Base.TextAppearance.AppCompat.Headline"
                    android:layout_width="236dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="0.8"
                    android:text="@string/othersettings_textview_unknown_sources"
                    android:textColor="@color/colorPrimaryDisable"
                    android:textSize="24sp" />

                <android.support.v7.widget.AppCompatCheckBox
                    android:id="@+id/checkbox_unknown_sources"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColorHighlight="@color/colorPrimaryDark"
                    android:buttonTint="@color/colorChecked"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="0.2"
                    android:textColorLink="@color/colorPrimary"
                    android:textSize="24sp"
                    android:theme="@style/AppTheme"
                    android:scaleX="2.0"
                    android:scaleY="2.0"
                    android:checked="true"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:padding="10dp"
                android:orientation="horizontal"
                android:background="@android:color/white"
                android:weightSum="1">

                <TextView
                    style="@style/Base.TextAppearance.AppCompat.Headline"
                    android:layout_width="236dp"
                    android:layout_height="wrap_content"
                    android:text="@string/othersettings_textview_disable_cameras"
                    android:layout_gravity="center_vertical"
                    android:textColor="@color/colorPrimary"
                    android:textSize="24sp"
                    android:layout_weight="0.8" />

                <android.support.v7.widget.AppCompatCheckBox
                    android:id="@+id/checkbox_disable_cameras"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColorHighlight="@color/colorPrimaryDark"
                    android:buttonTint="@color/colorChecked"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="0.2"
                    android:textColorLink="@color/colorPrimary"
                    android:textSize="24sp"
                    android:theme="@style/AppTheme"
                    android:scaleX="2.0"
                    android:scaleY="2.0"
                    android:checked="true"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:padding="10dp"
                android:orientation="horizontal"
                android:background="@android:color/white"
                android:weightSum="1">

                <TextView
                    style="@style/Base.TextAppearance.AppCompat.Headline"
                    android:id="@+id/textview_encrypt_device"
                    android:layout_width="236dp"
                    android:layout_height="wrap_content"
                    android:text="@string/othersettings_textview_encrypt_device"
                    android:layout_gravity="center_vertical"
                    android:textColor="@color/colorPrimary"
                    android:textSize="24sp"
                    android:layout_weight="0.8" />

                <android.support.v7.widget.AppCompatCheckBox
                    android:id="@+id/checkbox_encrypt_device"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColorHighlight="@color/colorPrimaryDark"
                    android:buttonTint="@color/colorChecked"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="0.2"
                    android:textColorLink="@color/colorPrimary"
                    android:textSize="24sp"
                    android:theme="@style/AppTheme"
                    android:scaleX="2.0"
                    android:scaleY="2.0"
                    android:checked="true"/>

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>


</RelativeLayout>
