<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="edu.ucdenver.androidsecurity.MainActivity"
    tools:showIn="@layout/app_bar_main">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.80"
            android:layout_marginBottom="8dp"
            app:cardUseCompatPadding="true">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textview_device_information"
                    style="@style/Base.TextAppearance.AppCompat.Large"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingBottom="5dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:paddingTop="7dp"
                    android:text="TextView"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp" />


                <TextView
                    android:id="@+id/textview_last_audit"
                    style="@style/Base.TextAppearance.AppCompat.Small"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight=".8"
                    android:background="@color/colorPrimary"
                    android:paddingBottom="5dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:paddingTop="7dp"
                    android:textAlignment="center"
                    android:textColor="@android:color/white" />

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.20"
            android:layout_marginTop="8dp"
            app:cardUseCompatPadding="true">

            <FrameLayout
                android:background="@color/colorPrimary"
                android:layout_width="8dp"
                android:layout_height="match_parent"/>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:weightSum="1">

                    <TextView
                        style="@style/Base.TextAppearance.AppCompat.Title"
                        android:layout_width="fill_parent"
                        android:layout_height="35dp"
                        android:textColor="@android:color/white"
                        android:background="@color/colorPrimary"
                        android:text="Audit Recommendations"
                        android:paddingLeft="15dp"
                        android:paddingTop="5dp" />

                    <ScrollView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:paddingLeft="15dp"
                                android:paddingTop="5dp"
                                android:paddingRight="15dp"
                                android:textStyle="bold"
                                android:textColor="@color/colorPrimary"
                                android:text="@string/home_textview_apps_recommendations" />

                            <TextView
                                android:id="@+id/textview_apps_recommendation"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:paddingBottom="5dp"
                                android:paddingLeft="15dp"
                                android:paddingRight="15dp"
                                android:paddingTop="5dp"/>

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="2dp"
                                android:background="@color/colorPrimary"/>


                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:paddingLeft="15dp"
                                android:paddingTop="5dp"
                                android:paddingRight="15dp"
                                android:textStyle="bold"
                                android:textColor="@color/colorPrimary"
                                android:text="@string/home_textview_connection_recommendations" />

                            <TextView
                                android:id="@+id/textview_connections_recommendation"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:paddingLeft="15dp"
                                android:paddingTop="5dp"
                                android:paddingBottom="5dp"
                                android:paddingRight="15dp"/>

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="2dp"
                                android:background="@color/colorPrimary"/>

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:paddingLeft="15dp"
                                android:paddingTop="5dp"
                                android:paddingRight="15dp"
                                android:textStyle="bold"
                                android:textColor="@color/colorPrimary"
                                android:text="@string/home_textview_camera_recommendations" />

                            <TextView
                                android:id="@+id/textview_camera_recommendation"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:paddingLeft="15dp"
                                android:paddingTop="5dp"
                                android:paddingBottom="5dp"
                                android:paddingRight="15dp"/>

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="2dp"
                                android:background="@color/colorPrimary"/>

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:paddingLeft="15dp"
                                android:paddingTop="5dp"
                                android:paddingRight="15dp"
                                android:textStyle="bold"
                                android:textColor="@color/colorPrimary"
                                android:text="@string/home_textview_unknownsources_recommendations" />

                            <TextView
                                android:id="@+id/textview_unknownsources_recommendation"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:paddingLeft="15dp"
                                android:paddingTop="5dp"
                                android:paddingBottom="5dp"
                                android:paddingRight="15dp"/>

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="2dp"
                                android:background="@color/colorPrimary"/>

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:paddingLeft="15dp"
                                android:paddingTop="5dp"
                                android:paddingRight="15dp"
                                android:textStyle="bold"
                                android:textColor="@color/colorPrimary"
                                android:text="@string/home_textview_encryption_recommendations" />

                            <TextView
                                android:id="@+id/textview_encryption_recommendation"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:paddingLeft="15dp"
                                android:paddingTop="5dp"
                                android:paddingBottom="5dp"
                                android:paddingRight="15dp"/>

                        </LinearLayout>
                    </ScrollView>
                </LinearLayout>
        </android.support.v7.widget.CardView>

    </LinearLayout>

</RelativeLayout>
